// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tenant Header > Header MOTI background 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0 {
  background-color: #003366;
  border: none;
  border-bottom: 0.2rem solid;
  grid-area: header;
}

<header
    class="c0"
  />
</DocumentFragment>
`;

exports[`Tenant Header > Header black background 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0 {
  background-color: black;
  border: none;
  border-bottom: 0.2rem solid;
  grid-area: header;
}

<header
    class="c0"
  />
</DocumentFragment>
`;

exports[`Tenant Header > Header default background 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c0 {
  background-color: #003366;
  border: none;
  border-bottom: 0.2rem solid;
  grid-area: header;
}

<header
    class="c0"
  />
</DocumentFragment>
`;
